quorum/test/tests/TypeChecker/Pass/ExpAssignBooleanBoolean.quorum
boolean bool = cast(boolean, true)