quorum/test/tests/TypeChecker/Fail/ImpAssignNumObjBoolObj.quorum
Boolean bool
bool:setValue(true)
Number num = bool